# decentralized-ai-provider

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.docs/: old-README.md
contracts/: .editorconfig  .env.example  .prettierrc.yml  .solhint.json  Cargo.toml  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt
contracts/script/: Base.s.sol  Deploy.s.sol
contracts/src/: AppRegistry.sol  HolToken.sol  ProviderRegistry.sol  RouterRegistry.sol  lib.rs
contracts/src/interfaces/: IAppRegistry.sol
contracts/test/: AppRegistry.t.sol
modules/ai_provider/: Cargo.toml  README.md  metadata.json  rustc-ice-2024-04-30T18_44_36-31423.txt  rustc-ice-2024-04-30T18_44_47-31773.txt  test.json  test.sh
modules/ai_provider/broker/: Cargo.toml
modules/ai_provider/broker/src/: admin.rs  chain.rs  lib.rs  types.rs  user.rs  worker.rs
modules/ai_provider/crate/shared/: Cargo.toml
modules/ai_provider/crate/shared/src/: lib.rs
modules/ai_provider/diffusion/: Cargo.toml
modules/ai_provider/diffusion/src/: lib.rs
modules/ai_provider/pkg/: manifest.json  scripts.json
modules/ai_provider/worker/: Cargo.toml
modules/ai_provider/worker/src/: admin.rs  broker_handler.rs  chain.rs  lib.rs  types.rs
