[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
alloy-sol-types = { version = "0.7.1", features = ["std", "json"] }
alloy-primitives = { version = "0.7.1", features = ["serde"] }
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
uuid = { version = "1.8.0", features = ["v4"] }
contracts = { path = "../../../contracts" }
once_cell = "1.10.0"
shared = { path = "../crate/shared" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
