[package]
name = "diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
shared = { path = "../crate/shared" }
url = "2"
http-auth-basic = "0.3.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
